--- a/_posts/post/2018-06-08-netty.md
+++ b/_posts/post/2018-06-08-netty.md
@@ -66,8 +66,20 @@ io.netty.util.concurrent.MultithreadEventExecutorGroup#MultithreadEventExecutorG
 io.netty.util.concurrent.EventExecutorChooserFactory.EventExecutorChooser#next
 ```
 4. EventLoopGroup调用```next()```方法，通过chooser获取到EventLoop实例并调用其注册方法。
-5. 将EventLoop和ChannelPromise都注册到channel中。```io.netty.channel.AbstractChannel.AbstractUnsafe#register```
+``` java
+io.netty.channel.AbstractChannel.AbstractUnsafe#register
+```
+5. 将EventLoop和ChannelPromise都注册到channel中。
 6. EventLoop启动一个线程来维护channel的事件，如线程已启动，则不重复启动。
-7. 将channel维护的java nio channel注册进EventLoop维护的selector，并将该channel作为attachment同时注册到SelectionKey中并触发registered事件。```io.netty.channel.nio.AbstractNioChannel#doRegister```
-8. channel注册之后会触发绑定的listener，会调用直行connect方法，如果链接成功，则触发active事件。```io.netty.bootstrap.Bootstrap#doResolveAndConnect0```
-9. 对于通道的读取则会走到NioEventLoop的processSelectedKey方法，会同时管理channel的数据读取和通道的关闭。 ```io.netty.channel.nio.NioEventLoop#processSelectedKey(java.nio.channels.SelectionKey, io.netty.channel.nio.AbstractNioChannel)```
+``` java
+io.netty.channel.nio.AbstractNioChannel#doRegister
+```
+7. 将channel维护的java nio channel注册进EventLoop维护的selector，并将该channel作为attachment同时注册到SelectionKey中并触发registered事件。
+``` java
+io.netty.bootstrap.Bootstrap#doResolveAndConnect0
+```
+8. channel注册之后会触发绑定的listener，会调用直行connect方法，如果链接成功，则触发active事件。
+``` java
+io.netty.channel.nio.NioEventLoop#processSelectedKey(java.nio.channels.SelectionKey, io.netty.channel.nio.AbstractNioChannel)
+```
+9. 对于通道的读取则会走到NioEventLoop的processSelectedKey方法，会同时管理channel的数据读取和通道的关闭。 
