--- a/_posts/post/2018-06-08-netty.md
+++ b/_posts/post/2018-06-08-netty.md
@@ -48,10 +48,11 @@ public class Client {
 
 ## 简述管道注册流程
 
+简单记录下自己阅读netty代码的总结。
 
-    ``` java
+  ``` java
         io.netty.bootstrap.Bootstrap#doResolveAndConnect
-    ```
+  ```
     
     
 * AbstractBootstrap负责初始化一个channel并注册，初始化是会open一个java nio channel，但此时并不会connect。
