--- a/_posts/post/2018-06-08-netty.md
+++ b/_posts/post/2018-06-08-netty.md
@@ -106,3 +106,8 @@ public class Client {
     io.netty.channel.nio.NioEventLoop#processSelectedKey(java.nio.channels.SelectionKey, io.netty.channel.nio.AbstractNioChannel)
     ```
 * 对于通道的读取则会走到NioEventLoop的processSelectedKey方法，会同时管理channel的数据读取和通道的关闭。 
+
+## 待补充
+
+1. netty监听模式
+2. EventLoop线程执行模式。
