--- a/_posts/yan/2018-06-28-yanyan52.md
+++ b/_posts/yan/2018-06-28-yanyan52.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-徐晓妍会叫妈妈了，分享一下昨天傍晚记录的视频。昨天早上妈妈叫的很好，可惜拍到。
+徐晓妍会叫妈妈了，分享一下昨天傍晚拍的视频。昨天早上妈妈叫的更好，甜甜的，可惜没拍到。
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/mama.mp4" type='video/mp4'>
