--- a/_posts/post/2018-06-28-mbean.md
+++ b/_posts/post/2018-06-28-mbean.md
@@ -52,7 +52,7 @@ public class MbeanManager {
             System.out.println(operatingSystemMXBean.getCommittedVirtualMemorySize());//可用于当前虚拟机的虚拟内存
             System.out.println(operatingSystemMXBean.getFreeSwapSpaceSize());// 空闲的交换区
             System.out.println(operatingSystemMXBean.getVersion());//操作系统版本
-            System.out.println(operatingSystemMXBean.getProcessCpuTime());
+            System.out.println(operatingSystemMXBean.getProcessCpuTime());//进程获取的CPU时间
 
         });
     }
