--- a/_posts/post/2018-06-28-mbean.md
+++ b/_posts/post/2018-06-28-mbean.md
@@ -42,19 +42,16 @@ public class MbeanManager {
         System.out.println(memoryMXBean.getHeapMemoryUsage());//内存使用率
         System.out.println(memoryMXBean.getNonHeapMemoryUsage());//堆外内存使用率
 
-        List<OperatingSystemMXBean> operatingSystemMXBeanList = ManagementFactory.getPlatformMXBeans(serverConnection, OperatingSystemMXBean.class);
-        operatingSystemMXBeanList.forEach(operatingSystemMXBean -> {
-
-            System.out.println(operatingSystemMXBean.getSystemCpuLoad());//系统负载
-            System.out.println(operatingSystemMXBean.getProcessCpuLoad());//进程负载
-            System.out.println(operatingSystemMXBean.getFreePhysicalMemorySize());//空闲物理内存
-            System.out.println(operatingSystemMXBean.getTotalPhysicalMemorySize());//物理内存
-            System.out.println(operatingSystemMXBean.getCommittedVirtualMemorySize());//可用于当前虚拟机的虚拟内存
-            System.out.println(operatingSystemMXBean.getFreeSwapSpaceSize());// 空闲的交换区
-            System.out.println(operatingSystemMXBean.getVersion());//操作系统版本
-            System.out.println(operatingSystemMXBean.getProcessCpuTime());//进程获取的CPU时间
-
-        });
+        OperatingSystemMXBean operatingSystemMXBean = ManagementFactory.getPlatformMXBean(serverConnection, OperatingSystemMXBean.class);
+        System.out.println(operatingSystemMXBean.getSystemCpuLoad());//系统负载
+        System.out.println(operatingSystemMXBean.getProcessCpuLoad());//进程负载
+        System.out.println(operatingSystemMXBean.getFreePhysicalMemorySize());//空闲物理内存
+        System.out.println(operatingSystemMXBean.getTotalPhysicalMemorySize());//物理内存
+        System.out.println(operatingSystemMXBean.getCommittedVirtualMemorySize());//可用于当前虚拟机的虚拟内存
+        System.out.println(operatingSystemMXBean.getFreeSwapSpaceSize());// 空闲的交换区
+        System.out.println(operatingSystemMXBean.getVersion());//操作系统版本
+        System.out.println(operatingSystemMXBean.getProcessCpuTime());//进程获取的CPU时间
+        
     }
 }
 ```
