--- a/_posts/post/2018-06-28-mbean.md
+++ b/_posts/post/2018-06-28-mbean.md
@@ -42,6 +42,7 @@ public class MbeanManager {
         System.out.println(memoryMXBean.getHeapMemoryUsage());//内存使用率
         System.out.println(memoryMXBean.getNonHeapMemoryUsage());//堆外内存使用率
 
+        //获取操作系统信息
         OperatingSystemMXBean operatingSystemMXBean = ManagementFactory.getPlatformMXBean(serverConnection, OperatingSystemMXBean.class);
         System.out.println(operatingSystemMXBean.getSystemCpuLoad());//系统负载
         System.out.println(operatingSystemMXBean.getProcessCpuLoad());//进程负载
