--- a/_posts/post/2018-06-28-mbean.md
+++ b/_posts/post/2018-06-28-mbean.md
@@ -53,6 +53,12 @@ public class MbeanManager {
         System.out.println(operatingSystemMXBean.getVersion());//操作系统版本
         System.out.println(operatingSystemMXBean.getProcessCpuTime());//进程获取的CPU时间
         
+        //获取线程信息
+        ThreadMXBean threadMXBean = ManagementFactory.getPlatformMXBean(serverConnection, ThreadMXBean.class);
+        System.out.println(threadMXBean.getPeakThreadCount());//峰值线程数
+        System.out.println(threadMXBean.getThreadCount());//当前线程数
+        System.out.println(threadMXBean.getDaemonThreadCount());//启动的守护线程总数
+        System.out.println(threadMXBean.getTotalStartedThreadCount());//启动的线程总数
     }
 }
 ```
