--- a/_posts/yan/2018-07-02-yanyan53.md
+++ b/_posts/yan/2018-07-02-yanyan53.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-妍妍又多了个新称呼，霸蛮妍。霸蛮是湖南话，妍妍受到点干扰，就会很用力，一定要做到。
+妍妍又多了个新称呼，霸蛮妍。她妈觉得女孩子要文静，不要像个男孩子一样这么霸蛮，我倒是觉得小孩子霸蛮挺可爱的。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/baman1.JPG?imageMogr2/auto-orient" />
