--- a/_posts/post/2018-07-10-doclet.md
+++ b/_posts/post/2018-07-10-doclet.md
@@ -10,3 +10,16 @@ tag:
 comments: true
 ---
 
+> 基于自定义注解，来限制对某个类或者某个方法的javadoc输出。
+
+## 选择方案
+
+1. 实现自定义doclet
+2. 代理原RootDoc
+3. 使用默认的HtmlDoclet生成文档
+
+## 代理RootDoc，ClassDoc，PackageDoc
+
+* 用我们实现的Doc类来代理默认的RootDoc，ClassDoc，PackageDoc。
+* 代理类中核心方法如```com.sun.javadoc.RootDoc#classes```增加扩展，实现自定义的类过滤逻辑。
+* 其余大部分类直接代理类的方法即可。
