--- a/_posts/post/2018-07-10-doclet.md
+++ b/_posts/post/2018-07-10-doclet.md
@@ -23,3 +23,5 @@ comments: true
 * 用我们实现的Doc类来代理默认的RootDoc，ClassDoc，PackageDoc。
 * 代理类中核心方法如```com.sun.javadoc.RootDoc#classes```增加扩展，实现自定义的类过滤逻辑。
 * 其余大部分类直接代理类的方法即可。
+* 需要注意的是，在方法层面，需要将ClassDoc和PackageDoc中返回ClassDoc的方法均用自定义的ClassDoc进行代理。
+* 最后，将代理的RootDoc传入给HtmlDoclet即可。
