--- a/_posts/post/2018-08-08-mode-diff.md
+++ b/_posts/post/2018-08-08-mode-diff.md
@@ -9,5 +9,5 @@ tag:
 comments: true
 ---
 
-* 代理模式：对目标对象的代理，以达到访问控制管理的目的。
+* 代理模式：对目标对象的代理，对外统一的表象，以达到访问控制管理的目的。
 * 装饰模式：对目标对象的行为的扩展，基于目标对象，增强其功能，典型的可参考InputStream，从基础的read()，到readLong()以及readLine()等，都是在最基础的read()方法进行增强。
