--- a/_posts/yan/2018-08-09-yanyan59.md
+++ b/_posts/yan/2018-08-09-yanyan59.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-徐晓妍是咕噜咕噜妍
+徐晓妍是咕噜咕噜妍💋
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/guluguluyanheji.jpg?imageMogr2/auto-orient" />
