--- a/_posts/yan/2018-08-22-yanyan61.md
+++ b/_posts/yan/2018-08-22-yanyan61.md
@@ -10,7 +10,7 @@ comments: true
 ---
 你妈帮你取了个新名字，叫瓜瓜妍，也不知道你妈怎么想的，妍妍本来就好傻了，这么叫感觉更傻了。
 {: .notice}
-最近一家三口都生病啦，显示妍妈感冒了，然后是妍妍发烧加手足口，最后我也发烧了，也得了手足口，好丢人，得了个小孩的病，哎！
+最近一家三口都生病啦，先是妍妈感冒了，然后是妍妍发烧加手足口，最后我也发烧了，也得了手足口，好丢人，得了个小孩的病，哎！
 {: .notice}
 发几张妍妍最近的照片，有两张是妍妍在外面玩困得不行了被我拍下来的。
 {: .notice}
