--- a/_posts/life/2018-08-30-xinche.md
+++ b/_posts/life/2018-08-30-xinche.md
@@ -9,7 +9,7 @@ life: true
 comments: true
 ---
 买车啦，雷凌双擎精英天窗版，今晚去提车，要上路了大家多多关照，哈哈哈哈！
-
+{: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/image/jpg/xinche1.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/image/jpg/xinche2.jpg?imageMogr2/auto-orient" />
