--- a/_posts/yan/2018-08-31-yanyan63.md
+++ b/_posts/yan/2018-08-31-yanyan63.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-奶奶抱着妍妍拍照，花一样的妍妍，花一样的奶奶，安静起来妍妍还是很像女孩子的。
+奶奶抱着妍妍拍照，花一样的奶奶，花一样的妍妍，安静起来妍妍还是很像女孩子的。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/huayan1.jpeg?imageMogr2/auto-orient" />
