--- a/_posts/yan/2018-08-31-yanyan63.md
+++ b/_posts/yan/2018-08-31-yanyan63.md
@@ -13,4 +13,5 @@ comments: true
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/huayan1.jpeg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/huayan2.jpeg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/huayan3.jpeg?imageMogr2/auto-orient" />
 </figure>
