--- a/_posts/post/2018-09-11-gradle.md
+++ b/_posts/post/2018-09-11-gradle.md
@@ -88,3 +88,41 @@ project(':crawler4j').projectDir = "$rootDir/crawler4j" as File
 project(':crawler4j-examples-base').projectDir = "$rootDir/crawler4j-examples/crawler4j-examples-base" as File
 project(':crawler4j-examples-postgres').projectDir = "$rootDir/crawler4j-examples/crawler4j-examples-postgres" as File
 ```
+
+### build生命周期
+
+生命周期分为：初始化，配置。执行三个不同的阶段。
+
+``` groovy
+settings.gradle
+
+println 'This is executed during the initialization phase.'
+
+build.gradle
+
+println 'This is executed during the configuration phase.'
+
+task configured {
+    println 'This is also executed during the configuration phase.'
+}
+
+task test {
+    doLast {
+        println 'This is executed during the execution phase.'
+    }
+}
+
+task testBoth {
+	doFirst {
+	  println 'This is executed first during the execution phase.'
+	}
+	doLast {
+	  println 'This is executed last during the execution phase.'
+	}
+	println 'This is executed during the configuration phase as well.'
+}
+```
+
+### Flat layout
+
+includeFlat名称即文件夹，并且这些文件夹只能作为子目录的形式存在。
