--- a/_posts/post/2018-09-11-gradle.md
+++ b/_posts/post/2018-09-11-gradle.md
@@ -94,11 +94,11 @@ project(':crawler4j-examples-postgres').projectDir = "$rootDir/crawler4j-example
 生命周期分为：初始化，配置。执行三个不同的阶段。
 
 ``` groovy
-settings.gradle
+//settings.gradle
 
 println 'This is executed during the initialization phase.'
 
-build.gradle
+//build.gradle
 
 println 'This is executed during the configuration phase.'
 
