--- a/_posts/post/2018-09-11-gradle.md
+++ b/_posts/post/2018-09-11-gradle.md
@@ -93,7 +93,7 @@ project(':crawler4j-examples-postgres').projectDir = "$rootDir/crawler4j-example
 
 生命周期分为：初始化，配置。执行三个不同的阶段。
 
-``` groovy
+``` gradle
 //settings.gradle
 
 println 'This is executed during the initialization phase.'
