--- a/_posts/yan/2018-09-20-yanyan69.md
+++ b/_posts/yan/2018-09-20-yanyan69.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-偷拍的一张妍妍和她妈妈一起睡觉的照片
+偷拍的一张妍妍和她妈妈一起睡觉的照片，妍妍的头发都被汗湿了
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/shuijiaozhao.jpg?imageMogr2/auto-orient" />
