--- a/_posts/yan/2018-09-26-yanyan70.md
+++ b/_posts/yan/2018-09-26-yanyan70.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-徐晓妍只有要吃的就坐的住，这哪里像女孩子呀
+徐晓妍只要有吃的就坐的住，这哪里像女孩子呀
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/chifan.mp4" type='video/mp4'>
