--- a/_posts/yan/2018-10-08-yanyan72.md
+++ b/_posts/yan/2018-10-08-yanyan72.md
@@ -15,6 +15,7 @@ video: true
     <img src="{{ site.staticUrl }}/yanyan/image/guoqing1.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/guoqing3.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/guoqing4.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/guoqing9.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/guoqing5.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/guoqing6.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/guoqing2.jpg?imageMogr2/auto-orient" />
