--- a/_posts/yan/2018-10-15-yanyan73.md
+++ b/_posts/yan/2018-10-15-yanyan73.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-周末一家人带徐晓妍去洋湖湿地，走了一半就下雨了，中午找了个大树，坐在树下的圆桌椅上，边躲雨边吃着面包陪炼奶
+周末一家人带徐晓妍去洋湖湿地，走了一半就下雨了，中午找了个大树，坐在树下的圆椅上，边躲雨边吃着面包陪炼奶
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/yanghu1.jpg?imageMogr2/auto-orient" />
