--- a/_posts/yan/2018-10-24-yanyan76.md
+++ b/_posts/yan/2018-10-24-yanyan76.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "妍妍坐"
-date: 2018-10-18
-excerpt: "妍妍的日记-75"
+title: "学走路"
+date: 2018-10-24
+excerpt: "妍妍的日记-76"
 tags: [徐晓妍]
 feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
