--- a/_posts/yan/2018-10-29-yanyan77.md
+++ b/_posts/yan/2018-10-29-yanyan77.md
@@ -11,7 +11,7 @@ video: true
 ---
 妍妍满周岁了，本来25号妍妍生日那天就要写这篇博客了，但因为照片同步问题一直拖到了今天。
 {: .notice}
-时间过的好快，一眨眼妍妍都一岁了，昨天再看妍妍小时候的照片，小时候的妍妍脸圆圆的，显得比现在胖多了，但是也好可爱，现在也好可爱，但现在越来越不乖了。
+时间过的好快，一眨眼妍妍都一岁了，昨天在看妍妍小时候的照片，小时候的妍妍脸圆圆的，显得比现在胖多了，但是也好可爱，现在也好可爱，但现在越来越不乖了。
 {: .notice}
 妍妍最近又开始拉肚子了，昨晚把粑粑送去化验，一切正常，又不知道是什么原因拉的肚子，好烦。
 {: .notice}
