--- a/_posts/post/2018-11-06-rst.md
+++ b/_posts/post/2018-11-06-rst.md
@@ -34,7 +34,18 @@ java.io.IOException: Connection reset by peer
 	at io.netty.util.concurrent.FastThreadLocalRunnable.run(FastThreadLocalRunnable.java:30)
 	at java.lang.Thread.run(Thread.java:748)
 ```
-在这里就不赘述我的整个单元测试的流程
+在这里就不完整展示我的整个单元测试的代码，只简单的就这个问题做一下原理性的描述。
 
+### 客户端异常
 
+客户端之所以会抛出`Connection reset by peer`异常，是由于客户端收到了一个标志位为RST的数据包，知道这点就够了，下面看看RST包产生的原因。
 
+### RST标志位
+
+RST是TCP协议规定的一种标志位，我认为应该是reset的缩写，表示连接被异常终止，tcp连接资源应该被重制。<br/>
+通常，之所以会发送RST数据包，是由于连接已经处于半关闭状态，但仍然收到了PSH数据包，半关闭状态是指连接准备被关闭，但还没完成四次挥手。<br/>
+通俗的讲，就像打电话，通话双方都要说完再见，就挂断电话，这时候一方已经准备说再见或者已经说了再见，还未收到对方的回复，这就是半关闭状态。这时候如果对方仍然和你继续沟通，你回复什么都别说了，还有想说的也别说了，这就是RST标志位。
+
+### 简述我的测试流程
+
+服务端主动关闭连接，但仍然收到了客户端的PSH数据包。
