--- a/_posts/post/2018-11-06-rst.md
+++ b/_posts/post/2018-11-06-rst.md
@@ -44,7 +44,7 @@ java.io.IOException: Connection reset by peer
 
 RST是TCP协议规定的一种标志位，我认为应该是reset的缩写，表示连接被异常终止，tcp连接资源应该被重制。<br/>
 通常，之所以会发送RST数据包，是由于连接已经处于半关闭状态，但仍然收到了PSH数据包，半关闭状态是指连接准备被关闭，但还没完成四次挥手。<br/>
-通俗的讲，就像打电话，通话双方都要说完再见，就挂断电话，这时候一方已经准备说再见或者已经说了再见，还未收到对方的回复，这就是半关闭状态。这时候如果对方仍然和你继续沟通，你回复什么都别说了，还有想说的也别说了，这就是RST标志位。
+通俗的讲，就像打电话，通话双方都要说完再见，就挂断电话，这时候一方已经准备说再见或者已经说了再见，还未收到对方的回复，这就是半关闭状态。这时候如果对方仍然和你继续沟通，你回复什么都别说了，想说的也都别说了，这就是RST标志位。
 
 ### 简述我的测试流程
 
