--- a/_posts/post/2018-11-06-rst.md
+++ b/_posts/post/2018-11-06-rst.md
@@ -14,6 +14,11 @@ comments: true
 <figure>
     <img src="{{ site.staticUrl }}/image/jpg/tcprst.jpg?imageMogr2/auto-orient" />
 </figure>
+<figure>
+	<a href="{{ site.staticUrl }}/image/jpg/tcprst.jpg?imageMogr2/auto-orient">
+    	<img src="{{ site.staticUrl }}/image/jpg/tcprst.jpg?imageMogr2/auto-orient">
+	</a>
+</figure>
 同时，客户端抛出了一个异常：
 ``` 
 java.io.IOException: Connection reset by peer
