--- a/_posts/post/2018-11-06-rst.md
+++ b/_posts/post/2018-11-06-rst.md
@@ -11,7 +11,7 @@ comments: true
 ---
 
 今天在调试TCP服务端代码时收到了一个标志位为RST的数据包，如下图：
-<figure>
+<figure class="clipboard">
 	<a href="{{ site.staticUrl }}/image/jpg/tcprst.jpg?imageMogr2/auto-orient">
     	<img src="{{ site.staticUrl }}/image/jpg/tcprst.jpg?imageMogr2/auto-orient">
 	</a>
