--- a/_posts/post/2018-11-06-rst.md
+++ b/_posts/post/2018-11-06-rst.md
@@ -12,8 +12,8 @@ comments: true
 
 今天在调试TCP服务端代码时收到了一个标志位为RST的数据包，如下图：
 <figure class="clipboard">
-	<a href="{{ site.staticUrl }}/image/jpg/tcprst.jpg?imageMogr2/auto-orient">
-    	<img src="{{ site.staticUrl }}/image/jpg/tcprst.jpg?imageMogr2/auto-orient">
+	<a href="{{ site.staticUrl }}/image/jpg/tcprst.jpg">
+    	<img src="{{ site.staticUrl }}/image/jpg/tcprst.jpg">
 	</a>
 </figure>
 同时，客户端抛出了一个异常：
