--- a/_posts/yan/2018-11-08-yanyan79.md
+++ b/_posts/yan/2018-11-08-yanyan79.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-昨天接爸爸下班，给妍妍戴爸爸的帽子，好可爱。
+昨天接爸爸下班，给妍妍戴爸爸的帽子，好可爱。还有，妍妍，最近你老是不听话，你妈脱发都严重了。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/maozi1.jpg?imageMogr2/auto-orient" />
