--- a/_posts/yan/2018-11-14-yanyan80.md
+++ b/_posts/yan/2018-11-14-yanyan80.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-好久没用背带了，今天用背带背着妍妍出来瞎逛，妍妍可开心了。
+好久没用背带了，难得用背带背着妍妍出来瞎逛，妍妍可开心了，脚一直在那荡，不停砖头到处看。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/bababeidai1.jpg?imageMogr2/auto-orient" />
