--- a/_posts/yan/2018-11-15-yanyan81.md
+++ b/_posts/yan/2018-11-15-yanyan81.md
@@ -11,6 +11,7 @@ comments: true
 妍妍妈双十一给妍妍买的兔耳朵帽子昨天到货了，晚上拿回来迫不及待的戴上，很可爱，发几张照片出来给大家看看。
 {: .notice}
 <figure>
+    <img src="{{ site.staticUrl }}/yanyan/image/tuerduomaozi0.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/tuerduomaozi1.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/tuerduomaozi2.jpg?imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/tuerduomaozi3.jpg?imageMogr2/auto-orient" />
