--- a/_posts/yan/2018-11-20-yanyan82.md
+++ b/_posts/yan/2018-11-20-yanyan82.md
@@ -7,9 +7,17 @@ tags: [徐晓妍]
 feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
+video: true
 ---
 爷爷奶奶打乒乓球，妍妍也会在旁边嘿哈嘿哈的学
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/pingpang.jpeg?imageMogr2/auto-orient" />
 </figure>
+<video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
+    <source src="{{ site.staticUrl }}/yanyan/video/pingpang.mp4" type='video/mp4'>
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a web browser that
+      <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+    </p>
+</video>
