--- a/_posts/yan/2018-11-20-yanyan82.md
+++ b/_posts/yan/2018-11-20-yanyan82.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-爷爷奶奶打乒乓球，妍妍也会在旁边嘿哈嘿哈的学
+爷爷奶奶打乒乓球，妍妍也会在旁边嘿哈嘿哈的学，还学的有模有样
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/pingpang.jpeg?imageMogr2/auto-orient" />
