--- a/_posts/yan/2018-10-29-yanyan77.md
+++ b/_posts/yan/2018-10-29-yanyan77.md
@@ -20,10 +20,10 @@ video: true
 好了，就这样吧，爸爸爱你❤️
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui1.jpg?imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui2.jpg?imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui4.jpg?imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui5.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousuishengri1.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousuishengri2.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousuishengri4.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousuishengri5.jpg?imageMogr2/auto-orient" />
 </figure>
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/zhousui3.mp4" type='video/mp4'>
