--- a/_posts/yan/2018-11-22-yanyan83.md
+++ b/_posts/yan/2018-11-22-yanyan83.md
@@ -11,5 +11,5 @@ comments: true
 妍妍周岁了，上周末带她去拍了周岁照，分享几张拍的比较好的。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui.jpg?imageMogr2/auto-orient&imageslim" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui.JPG" />
 </figure>
