--- a/_posts/yan/2018-11-26-yanyan84.md
+++ b/_posts/yan/2018-11-26-yanyan84.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "周日早上，带着土红的帽子"
+title: "周日早上，带着土红的帽子的妍妍"
 date: 2018-11-26
 excerpt: "妍妍的日记-84"
 tags: [徐晓妍]
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-这段时间长沙天气不错，难得的暖冬，太阳照在身上很舒服。
+这段时间长沙天气不错，难得的暖冬，太阳照在身上很舒服。妈妈说妍妍的红帽子看上去很土气。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/hongmaoziyanyan2.jpg?imageslim&imageMogr2/auto-orient" />
