--- a/_posts/yan/2018-12-18-yanyan90.md
+++ b/_posts/yan/2018-12-18-yanyan90.md
@@ -7,6 +7,7 @@ tags: [徐晓妍]
 feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
+video: true
 ---
 妍妍坐在爸爸的肩膀上了。
 {: .notice}
@@ -16,3 +17,10 @@ comments: true
     <img src="{{ site.staticUrl }}/yanyan/image/jugaogao3.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/jugaogao4.jpg?imageslim&imageMogr2/auto-orient" />
 </figure>
+<video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
+    <source src="{{ site.staticUrl }}/yanyan/video/jugaogao.mp4" type='video/mp4'>
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a web browser that
+      <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+    </p>
+</video>
