--- a/_posts/yan/2019-01-02-yanyan93.md
+++ b/_posts/yan/2019-01-02-yanyan93.md
@@ -8,13 +8,12 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-元旦节全家逛砂之船，很近，以后有个好去处了
+元旦节全家逛砂之船，很近，以后有个好去处了。附件一张妍妍戴头巾的照片。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan1.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan2.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan3.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan4.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan5.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan6.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan7.jpg?imageslim&imageMogr2/auto-orient" />
@@ -23,4 +22,5 @@ comments: true
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan10.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan11.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan12.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan4.jpg?imageslim&imageMogr2/auto-orient" />
 </figure>
