--- a/_posts/yan/2019-01-21-yanyan97.md
+++ b/_posts/yan/2019-01-21-yanyan97.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-妈妈新买的红色的披风，妍妍试穿下。
+妈妈给妍妍买的新披风，妍妍试穿下。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/hongsepifeng1.jpg?imageslim&imageMogr2/auto-orient" />
