--- a/_posts/yan/2019-02-03-yanyan99.md
+++ b/_posts/yan/2019-02-03-yanyan99.md
@@ -8,5 +8,5 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-妍妍又发烧了，一天大部分时间都在哭，都在哼唧，身上没力气，总是要抱，好可怜，好希望要妍妍能早点好起来。
+妍妍又发烧了，一天大部分时间都在哭，都在哼唧，身上没力气，总是要抱，看着好可怜，好希望要妍妍能早点好起来。
 {: .notice}
