--- a/_posts/yan/2019-02-14-yanyan100.md
+++ b/_posts/yan/2019-02-14-yanyan100.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-过年啦，今年过年妍妍上桌吃饭了，还买了花炮带她去放，只是今天都初十了，花炮还是没放完。
+过年啦，今年过年妍妍上桌吃饭了，还买了花炮带她去放，只是今天都初十了，花炮都还没放完。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/2019guonian1.jpg?imageslim&imageMogr2/auto-orient" />
