--- a/_posts/yan/2019-02-20-yanyan102.md
+++ b/_posts/yan/2019-02-20-yanyan102.md
@@ -10,6 +10,8 @@ comments: true
 ---
 分享一张徐晓妍和妈妈的照片😊
 {: .notice}
+PS. 妍妍嘴角还有一粒饭
+{: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/yanyanhemamazp.jpeg?imageslim&imageMogr2/auto-orient" />
 </figure>
