--- a/_posts/life/2019-02-28-meng.md
+++ b/_posts/life/2019-02-28-meng.md
@@ -3,7 +3,7 @@ layout: post
 title: "梦到当年毕业时"
 date: 2019-02-28
 excerpt: "梦到当年毕业时候的场景"
-tags: [梦]
+tags: [回忆]
 feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
