--- a/_posts/life/2019-02-28-meng.md
+++ b/_posts/life/2019-02-28-meng.md
@@ -8,5 +8,5 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
 ---
-前天晚上做梦，梦到自己大学毕业时候的场景了，同学一个个离开，十分感慨，一转眼这么多年了，当时真是青春啊。
+前天晚上做梦，梦到自己大学毕业时候的场景了，看着同学一个个离开，十分感慨，一转眼这么多年了，当时真是青春啊。
 {: .notice}
