--- a/_posts/yan/2019-03-05-yanyan105.md
+++ b/_posts/yan/2019-03-05-yanyan105.md
@@ -10,7 +10,7 @@ comments: true
 ---
 周日天气不错，带妍妍去尖山湖玩，也让她看看爸爸每天跑步的地方是个什么样子。
 {: .notice}
-PS. 这应该是第一次分享徐晓妍的新发型
+这应该是第一次分享徐晓妍的新发型
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx1.jpg?imageslim&imageMogr2/auto-orient" />
