--- a/_posts/yan/2019-03-10-yanyan106.md
+++ b/_posts/yan/2019-03-10-yanyan106.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-现在妍妍已经可以自如的开着她的扭扭车到处走了😊
+妈妈带着妍妍在车库玩，现在妍妍已经可以自如的开着她的扭扭车到处走了😊
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/cknnc.mp4" type='video/mp4'>
