--- a/_posts/yan/2019-03-14-yanyan108.md
+++ b/_posts/yan/2019-03-14-yanyan108.md
@@ -20,3 +20,11 @@ video: true
     <img src="{{ site.staticUrl }}/yanyan/image/srjsh7.jpg?imageslim&imageMogr2/auto-orient" />
     <img src="{{ site.staticUrl }}/yanyan/image/srjsh8.jpg?imageslim&imageMogr2/auto-orient" />
 </figure>
+<video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
+    <source src="{{ site.staticUrl }}/yanyan/video/srjsh5.mp4" type='video/mp4'>
+    <source src="{{ site.staticUrl }}/yanyan/video/srjsh9.mp4" type='video/mp4'>
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a web browser that
+      <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+    </p>
+</video>
