--- a/_posts/yan/2019-03-14-yanyan108.md
+++ b/_posts/yan/2019-03-14-yanyan108.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-再分享一些上次去尖山湖拍的照片和视频，还要拔草拿给我，真是谢谢妍妍了。
+再分享一些上次去尖山湖拍的照片和视频，还要拔草拿给我，真是谢谢妍妍了😂
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/srjsh1.jpg?imageslim&imageMogr2/auto-orient" />
