--- a/_posts/yan/2019-03-18-yanyan110.md
+++ b/_posts/yan/2019-03-18-yanyan110.md
@@ -8,7 +8,7 @@ feature: https://i.imgur.com/Ds6S7lJ.png
 yan: true
 comments: true
 ---
-妈妈给徐晓妍扎辫子了😊
+妈妈给徐晓妍扎辫子了😊，我们家的妍妍是最可爱的。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/zxbzi1.jpg?imageslim&imageMogr2/auto-orient" />
