--- a/_posts/yan/2019-02-14-yanyan100.md
+++ b/_posts/yan/2019-02-14-yanyan100.md
@@ -11,15 +11,15 @@ comments: true
 过年啦，今年过年妍妍上桌吃饭了，还买了花炮带她去放，只是今天都初十了，花炮都还没放完。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian1.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian2.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian3.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian4.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian5.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian6.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian7.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian8.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian9.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian10.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian11.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian3.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian4.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian5.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian6.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian7.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian8.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian9.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian10.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/2019guonian11.jpg" />
 </figure>
