--- a/_posts/yan/2019-02-20-yanyan102.md
+++ b/_posts/yan/2019-02-20-yanyan102.md
@@ -13,5 +13,5 @@ comments: true
 PS. 妍妍嘴角还有一粒饭
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/yanyanhemamazp.jpeg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yanyanhemamazp.jpeg" />
 </figure>
