--- a/_posts/yan/2019-03-05-yanyan105.md
+++ b/_posts/yan/2019-03-05-yanyan105.md
@@ -13,11 +13,11 @@ comments: true
 这应该是第一次分享徐晓妍的新发型
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx1.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx2.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx3.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx4.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx5.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx6.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx7.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx3.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx4.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx5.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx6.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/jianshanhuxfx7.jpg" />
 </figure>
