--- a/_posts/yan/2018-11-22-yanyan83.md
+++ b/_posts/yan/2018-11-22-yanyan83.md
@@ -11,50 +11,50 @@ comments: true
 妍妍周岁了，上周末带她去拍了周岁照，分享几张拍的比较好的。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui1.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui2.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui3.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui4.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui5.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui6.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui7.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui8.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui9.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui10.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui11.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui12.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui13.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui14.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui15.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui16.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui17.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui18.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui19.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui20.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui21.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui22.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui23.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui24.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui25.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui26.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui27.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui28.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui29.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui30.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui31.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui32.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui33.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui34.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui35.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui36.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui37.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui38.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui39.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui40.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui41.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui42.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui43.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui44.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui45.JPG?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zhousui46.JPG?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui1.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui2.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui3.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui4.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui5.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui6.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui7.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui8.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui9.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui10.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui11.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui12.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui13.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui14.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui15.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui16.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui17.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui18.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui19.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui20.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui21.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui22.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui23.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui24.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui25.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui26.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui27.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui28.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui29.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui30.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui31.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui32.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui33.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui34.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui35.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui36.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui37.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui38.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui39.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui40.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui41.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui42.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui43.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui44.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui45.JPG" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zhousui46.JPG" />
 </figure>
