--- a/_posts/yan/2018-12-05-yanyan86.md
+++ b/_posts/yan/2018-12-05-yanyan86.md
@@ -11,11 +11,11 @@ comments: true
 周六幼儿园开亲自运动会，带妍妍去那里玩了一上午，还差点被一个两三岁的小男孩亲到了，被我扒开了。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui6.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui20.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui2.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui5.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui12.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui16.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui17.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui6.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui20.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui5.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui12.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui16.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yundonghui17.jpg" />
 </figure>
