--- a/_posts/yan/2018-12-26-yanyan92.md
+++ b/_posts/yan/2018-12-26-yanyan92.md
@@ -11,16 +11,16 @@ comments: true
 昨天晚上去新开业的砂之船逛逛，留下几张在茶颜悦色喝奶茶时候拍的照片
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan1.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan2.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan3.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan4.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan5.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan6.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan7.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan8.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan10.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan11.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan13.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan9.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan3.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan4.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan5.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan6.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan7.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan8.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan10.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan11.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan13.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/shazhichuanshengdan9.jpg" />
 </figure>
