--- a/_posts/yan/2019-01-02-yanyan93.md
+++ b/_posts/yan/2019-01-02-yanyan93.md
@@ -11,16 +11,16 @@ comments: true
 元旦节全家逛砂之船，很近，以后有个好去处了。附件一张妍妍戴头巾的照片。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan1.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan2.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan3.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan5.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan6.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan7.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan8.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan9.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan10.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan11.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan12.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan4.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan3.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan5.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan6.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan7.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan8.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan9.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan10.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan11.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan12.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/yuandanshazhichuan4.jpg" />
 </figure>
