--- a/_posts/yan/2019-01-02-yanyan94.md
+++ b/_posts/yan/2019-01-02-yanyan94.md
@@ -11,10 +11,10 @@ comments: true
 18年的第一场雪，带妍妍下楼玩雪，怎么感觉妍妍有点懵
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/wanxue181.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/wanxue182.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/wanxue183.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/wanxue184.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/wanxue185.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/wanxue186.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/wanxue181.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/wanxue182.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/wanxue183.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/wanxue184.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/wanxue185.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/wanxue186.jpg" />
 </figure>
