--- a/_posts/yan/2019-01-21-yanyan97.md
+++ b/_posts/yan/2019-01-21-yanyan97.md
@@ -11,6 +11,6 @@ comments: true
 妈妈给妍妍买的新披风，妍妍试穿下。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/hongsepifeng1.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/hongsepifeng2.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/hongsepifeng1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/hongsepifeng2.jpg" />
 </figure>
