--- a/_posts/yan/2019-02-26-yanyan104.md
+++ b/_posts/yan/2019-02-26-yanyan104.md
@@ -11,10 +11,10 @@ comments: true
 周日难得天气不错，一起去梅溪湖新天地逛，体验了一下骨感传到耳机，梅溪湖新天地还是比砂之窗高档一些。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw1.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw2.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw3.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw4.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw5.jpg?imageslim&imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw6.jpg?imageslim&imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw1.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw2.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw3.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw4.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw5.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/meixihuzmyw6.jpg" />
 </figure>
